--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "git-commit-msg-linter": "^3.1.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.4",
